# patience

./: LICENSE  README.md  main.py  patience.desktop  pyproject.toml
docs/: app.py.md  cards.py.md  cruel-game.py.md  game-module-pattern.md  game-registry.md  help.py.md  index.md  patience-game.py.md  piles.py.md  theme.py.md  window.py.md
src/patience/: __init__.py  __main__.py  app.py  window.py
src/patience/games/: __init__.py  registry.py
src/patience/games/cruel/: __init__.py  game.py
src/patience/games/demon/: __init__.py  game.py
src/patience/games/freecell/: __init__.py  game.py
src/patience/games/klondike/: __init__.py  game.py
src/patience/games/patience/: __init__.py  game.py
src/patience/ui/: cards.py  help.py  piles.py  theme.py
tests/: test_cruel_game.py  test_demon_game.py  test_freecell_game.py  test_package.py  test_patience_game.py  test_registry.py
