[project]
name = "patience"
version = "0.1.27"
description = "single player card games gtk4 interface"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"ccacards @ file:///home/chris/src/ccacards",
	"PyGObject>=3.48.2",
]

[dependency-groups]
dev = [
	"pytest>=8.3.4,<9.0.0",
]

[project.scripts]
patience = "patience.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patience"]

[tool.hatch.metadata]
allow-direct-references = true
